[gd_scene load_steps=2 format=3 uid="uid://cb2jlibqocuh1"]

[ext_resource type="Script" uid="uid://bn7b1l8txyurw" path="res://Menu/start_menu.gd" id="1_gnuge"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnuge")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7696908, 0.56733143, 0.8236971, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -243.5
offset_right = 214.5
offset_bottom = 243.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 41.5
offset_top = 45.5
offset_right = 388.5
offset_bottom = 100.5
theme_override_font_sizes/font_size = 40
text = "Best Online Game"

[node name="Button_connect" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 114.5
offset_top = 171.5
offset_right = 186.5
offset_bottom = 202.5
text = "Connect"

[node name="Label" type="LineEdit" parent="Panel/Button_connect"]
layout_mode = 0
offset_left = 76.0
offset_top = 1.0
offset_right = 176.0
offset_bottom = 32.0
placeholder_text = "127.0.0.1"

[node name="Label2" type="Label" parent="Panel/Button_connect"]
layout_mode = 0
offset_left = 185.0
offset_top = 4.0
offset_right = 290.0
offset_bottom = 27.0
text = "Disconnected"

[node name="Button_play" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 186.5
offset_top = 222.5
offset_right = 230.5
offset_bottom = 253.5
text = "Play"

[node name="Button_host" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 184.5
offset_top = 285.5
offset_right = 228.5
offset_bottom = 316.5
text = "Host"

[node name="Button_Quit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 185.5
offset_top = 359.5
offset_right = 229.5
offset_bottom = 390.5
text = "Quit"

[connection signal="pressed" from="Panel/Button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Panel/Button_Quit" to="." method="_on_button_quit_pressed"]
